--- a/SongScheduler/src/gui/HoldingsFilesWindow.form
+++ b/SongScheduler/src/gui/HoldingsFilesWindow.form
@@ -209,6 +209,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Select"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="selectHoldingFileActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="fileName">
         </Component>
@@ -221,6 +224,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Make New"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="makeNewFileActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
           <AuxValues>
@@ -242,6 +248,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Set as Default"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="setDefaultFileActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
