--- a/SongScheduler/src/gui/SongSchedulerWindow.form
+++ b/SongScheduler/src/gui/SongSchedulerWindow.form
@@ -324,6 +324,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="songPopularityDisplay">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="songPopularityDisplayActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="songLastPlayedDisplay">
         </Component>
